--- a/code/merritt/jan-21-blog/templates/base.html
+++ b/code/merritt/jan-21-blog/templates/base.html
@@ -10,7 +10,19 @@
   </head>
   <body>
     <header>
-      <h1><a href="{% url 'posts:home' %}">My Super Cool Blog</a></h1>
+      <div class="nav-left">
+        <h1><a href="{% url 'posts:home' %}">My Super Cool Blog</a></h1>
+      </div>
+      <div class="nav-right">
+      {% if user.is_authenticated %}
+        <p>Hello, <a href="{% url 'users:profile' user.username %}">{{ user.username }}</a>!</p>
+        <p><a href="{% url 'logout' %}">Logout</a></p>
+        <p><a href="{% url 'posts:new' %}">+ New Blog Post</a></p>
+      {% else %}
+        <p><a href="{% url 'login' %}">Login</a></p>
+        <p><a href="{% url 'users:signup' %}">Sign Up</a></p>
+      {% endif %}
+      </div>
     </header>
     <div class="container">
         {% block content %}
