--- a/code/merritt/jan-21-blog/templates/user_profile.html
+++ b/code/merritt/jan-21-blog/templates/user_profile.html
@@ -2,10 +2,13 @@
 
 {% block content %}
 
-    {% for post in object_list %}
+    <h1>{{ user_profile.username }}</h1>
+    <h5><em>Writing stuff since {{ user_profile.date_joined }}!</em></h5>
+
+    {% for post in user_profile.post_set.all %}
         <div class="post-entry">
             <h2><a href="{% url 'posts:detail' post.id %}">{{ post.title }}</a></h2>
-            <h4><em><a href="{% url 'users:profile' post.author.username %}">{{ post.author.username }}<a/></em> -- {{ post.created }}</h4>
+            <h4><em>{{ post.author.username }}</em> -- {{ post.created }}</h4>
             {% comment %} {{ post.body|linebreaks }} {% endcomment %}
             <p>{{ post.body|linebreaksbr }}</p>
         </div>
