twitter - able to post tweets

--- a/code/richard/django/4_Chirp/posts/templates/base.html
+++ b/code/richard/django/4_Chirp/posts/templates/base.html
@@ -1,11 +1,20 @@
+{% load static %}
 <html>
  <head>
     <title>Richard's Twitter Clone</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
  </head>
 
  <body>
     <header>
-        <h1><a href="{% url 'home' %}">Twitter Clone</a></h1>
+        <div class = "nav-left">
+            <h1><a href="{% url 'posts:home' %}">Twitterer - No Ads!</a></h1>
+        </div>
+
+        <div class = "nav-right">
+            <h3><a href="{% url 'posts:post_new' %}">+ New Tweet</a></h3>
+        </div>
+
     </header>
 
     <div>
