--- a/code/richard/django/4_Chirp/posts/templates/base.html
+++ b/code/richard/django/4_Chirp/posts/templates/base.html
@@ -17,6 +17,15 @@
 
     </header>
 
+    {% if user.is_authenticated %}
+        <p>Hi, {{ user.username }}</p>
+        <p><a href="{% url 'logout' %}"</a>Log Out</p>
+    {% else %}
+        <p>You are not logged in</p>
+        <p><a href="{% url 'login' %}"</a>Log In</p>
+
+    {% endif %}
+
     <div>
         {% block content %}
         {% endblock content %}
