--- a/code/charlie/URL_Short/url_short/templates/url_short/index.html
+++ b/code/charlie/URL_Short/url_short/templates/url_short/index.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Charlie's URL Shortener</h1>
     {% if new_url %}
-
-    <a href="{% url 'url_short:redirect' new_url.short_code %}">localhost:8000/{{ new_url }}</a>
+    
+    <label for="Shorten Link"><a href="{% url 'url_short:redirect' new_url.short_code %}">Shortened link= localhost:8000/{{ new_url }}</a></label>
     {% endif %}
     <p>
         <form action="{% url 'url_short:index' %}" method='POST'>
@@ -18,7 +18,7 @@
         <button type="submit">Shorten</button>
         </form>
 
-        {{ new_url }}
+        <!-- {{ new_url }} -->
     </p>
 
 </body>
