--- a/code/richard/django/4_Chirp/posts/templates/post_detail.html
+++ b/code/richard/django/4_Chirp/posts/templates/post_detail.html
@@ -4,7 +4,7 @@
     
         <div class = "post-entry">
             <h2>{{ post.content }}</h2>
-            <p>{{ post.author }} | {{ post.date_posted }}</p>
+            <p><a href="{% url 'users:profile' post.author %}">{{ post.author }}</a> | {{ post.date_posted }}</p>
         </div>
 
         <a href = "{% url 'posts:post_update' post.pk %}">+ Edit Tweet</a>
