--- a/code/richard/django/4_Chirp/posts/templates/base.html
+++ b/code/richard/django/4_Chirp/posts/templates/base.html
@@ -23,6 +23,7 @@
     {% else %}
         <p>You are not logged in</p>
         <p><a href="{% url 'login' %}">Log In</a></p>
+        <p><a href="{% url 'users:signup' %}">Sign Up</a></p>
 
     {% endif %}
 
