--- a/code/mike/django/chirp/static/chirp/style.css
+++ b/code/mike/django/chirp/static/chirp/style.css
@@ -37,6 +37,14 @@ a {
     color: blue;
 }
 
+.buttons input{
+    font-size: 1em;
+    font-weight: bolder;
+    width: 8em;
+    background-color: grey;
+    border-radius: 20px;
+}
+
 .sidenav a {
     text-decoration: none;
     text-align: center;
@@ -57,12 +65,27 @@ a {
 
 .container {
     padding: 5px;
+    color:green;
 }
 
-.post-buttons {
-    border-bottom-style: solid;
+.post-entry {
+    border-style: solid;
     border-width: 1px;
-    border-color: gray;
+    border-color: grey;
+}
+
+.profile_info p{
+    border-style: solid;
+    border-width: 1px;
+    border-color: grey;
+}
+
+#new_chirp {
+    font-size: 1.5em;
+    font-weight: bolder;
+    width: 8em;
+    background-color: lightblue;
+    border-radius: 20px;
 }
 
 @media (min-width: 768px) {
