--- a/code/mike/django/chirp/templates/user_profile.html
+++ b/code/mike/django/chirp/templates/user_profile.html
@@ -4,6 +4,12 @@
 
     <h1>{{ user_profile.username }}</h1>
     <h5><em>Chirping since {{ user_profile.date_joined }}!</em></h5>
+    <div class="profile_info">
+        <h3>Location</h3>
+        <p>{{ user_profile.profile.location|linebreaksbr }}</p><br/>
+        <h3>Bio</h3>
+        <p>{{ user_profile.profile.bio|linebreaksbr }}</p><br/>
+    </div>
 
     {% for post in user_profile.post_set.all %}
         <div class="post-entry">
@@ -12,12 +18,13 @@
         </div>
     {% endfor %}
 
-    {% if user.is_authenticated %}
-        <form action="" method="post">
+    {% if user_profile == user %}
+        <form action="{% url 'users:edit' user.username %}">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Edit">
         </form>
     {% endif %}
+
 
 {% endblock content %}
