--- a/code/conor/django/lab_3/chirp_project/static/css/style.css
+++ b/code/conor/django/lab_3/chirp_project/static/css/style.css
@@ -9,6 +9,7 @@ body, html {
 
 body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
 }
 
 h1, h2, h3, h4, h5 {
@@ -16,7 +17,7 @@ h1, h2, h3, h4, h5 {
 }
 
 header {
-    border: solid darkgray;
+    border: 4px solid darkgray;
 }
 
 .sidebar {
@@ -30,7 +31,10 @@ header {
 .gallery-view{
     background-color: darkgrey;
     padding: 20px;
-    margin: 10px;
+}
+
+.main {
+    border: 4px solid rgb(0, 0, 126);
 }
 
 .main div {
@@ -48,18 +52,16 @@ header {
     }
 
     .gallery-view {
-        margin: 0 -6px;
         display: flex;
-        flex-wrap: wrap;
-        width: 65vw;
+        /* flex-wrap: wrap; */
+        width: 70vw;
         overflow-y: auto;
     }
 
     .sidebar {
-        height: auto;
-        width: 30vw; /* Set the width of the sidebar */
+        height: 300px;
+        width: 20vw; /* Set the width of the sidebar */
         overflow-x: hidden; /* Disable horizontal scroll */
-        align-content: left;
     }
       
       /* The navigation menu links */
@@ -69,8 +71,8 @@ header {
     }
 
     .main {
-        margin-right: 50px;
-        padding-right: 6px;
+        margin-right: 25px;
+        margin-left: 25px;
     }
 }
 
