--- a/code/conor/django/lab_3/chirp_project/templates/base.html
+++ b/code/conor/django/lab_3/chirp_project/templates/base.html
@@ -31,7 +31,7 @@
         {% endif %}
       </div>
     </header>
-    <div class="gallery-view main">
+    <div class="main">
         {% block content %}
         {% endblock content %}
     </div>
