--- a/code/conor/django/lab_3/chirp_project/templates/detail.html
+++ b/code/conor/django/lab_3/chirp_project/templates/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div>
+    <div class="gallery-view">
         <h3>Posted by: <em> {{ post.author.username }}. </em></h3>
         <h4><em>Posted on {{ post.created }}</em></h4>
         <h4><em>Last updated on {{ post.updated }}</em></h4>
