--- a/code/conor/django/lab_3/chirp_project/templates/delete.html
+++ b/code/conor/django/lab_3/chirp_project/templates/delete.html
@@ -6,7 +6,7 @@
 
     <form action="" method="post">
         {% csrf_token %}
-        <p>Are you sure you want to delete the post "{{ post.title }}"?</p>
+        <p>Are you sure you want to delete this post?</p>
         <input type="submit" value="Confirm">
     </form>
 
