django twitter adding bootstrap and more css

--- a/code/richard/django/4_Chirp/posts/templates/post_detail.html
+++ b/code/richard/django/4_Chirp/posts/templates/post_detail.html
@@ -11,3 +11,8 @@
         <a href = "{% url 'posts:post_delete' post.pk %}">+ Delete Tweet</a>
     
 {% endblock content %}
+
+
+#center {
+    text-align: center;
+}
