--- a/code/richard/django/4_Chirp/posts/templates/base.html
+++ b/code/richard/django/4_Chirp/posts/templates/base.html
@@ -1,36 +1,88 @@
 {% load static %}
 <html>
  <head>
-    <title>Richard's Twitter Clone</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+    <title>Richard's Twitter Clone</title>
  </head>
 
  <body>
+ 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark container">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'posts:home' %}">Twitterer</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'posts:home' %}">Home</a>
+        </li>
+
+        {% if user.is_authenticated %}
+
+        <li class="nav-item">
+            <a class="nav-link " href="{% url 'posts:post_new' %}">New Tweet</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link " href="{% url 'logout' %}">Log Out</a>
+        </li>
+
+        {% else %}
+
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'users:signup' %}">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Log In</a>
+        </li>
+        {% endif %}
+      </ul>
+
+    </div>
+  </div>
+</nav>
+
+    <div class="container" >
+    
+    
+    
     <header>
-        <div class = "nav-left">
-            <h1><a href="{% url 'posts:home' %}">Twitterer - No Ads!</a></h1>
-        </div>
-
-        <div class = "nav-right">
-            <h3><a href="{% url 'posts:post_new' %}">+ New Tweet</a></h3>
-        </div>
-
+        {% if user.is_authenticated %}
+            <p>Hi, {{ user.username }}</p>
+        {% else %}
+            <p>You are not logged in</p>
+        {% endif %}
     </header>
 
-    {% if user.is_authenticated %}
-        <p>Hi, {{ user.username }}</p>
-        <p><a href="{% url 'logout' %}">Log Out</a></p>
-    {% else %}
-        <p>You are not logged in</p>
-        <p><a href="{% url 'login' %}">Log In</a></p>
-        <p><a href="{% url 'users:signup' %}">Sign Up</a></p>
 
-    {% endif %}
 
-    <div>
+    <div id="content-main">
         {% block content %}
         {% endblock content %}
     </div>
+
+    <footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">© 2021 Copyright:<a class="text-dark" href="http://www.Data2Revenue.com">Twitterer - No Ads!</a></div>
+    <!-- Copyright -->
+    </footer>
+
+
+
+    </div>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
  </body>
 
