--- a/code/richard/django/4_Chirp/static/css/base.css
+++ b/code/richard/django/4_Chirp/static/css/base.css
@@ -14,6 +14,10 @@ body {
     text-decoration: none;
   }
   
+div.container {
+  background-color:rgb(224, 220, 220);
+}
+
   .nav-left {
     margin-right: auto;
   }
@@ -45,3 +49,7 @@ body {
   .post-entry h2 a:hover {
     color: red;
   }
+
+#content-main {
+   color:rgb(109, 178, 224);
+ }
