--- a/code/mike/django/chirp/templates/user_profile.html
+++ b/code/mike/django/chirp/templates/user_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+    <img src="{{ image.url }}">
     <h1>{{ user_profile.username }}</h1>
     <h5><em>Chirping since {{ user_profile.date_joined }}!</em></h5>
     <div class="profile_info">
