javascript todo list progress

--- a/code/richard/javascript/lab_04_todo_list/style.css
+++ b/code/richard/javascript/lab_04_todo_list/style.css
@@ -86,3 +86,49 @@ h1 {
 .complete-btn {
     background: green;
 }
+
+.fa-trash, .fa-check {
+    pointer-events: none;
+}
+
+
+.completed {
+    text-decoration: line-through;
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+}
+
+.select {
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+}
+
+select {
+    color: darkblue;
+    width: 10rem;
+    cursor: pointer;
+    padding: 1rem;
+}
+
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    background: blue;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    pointer-events: none;
+}
+
+.select:hover::after {
+    background: black;
+    color: white;
+}
+
