--- a/code/richard/javascript/vue/lab_11_Vue_todo/css/site.css
+++ b/code/richard/javascript/vue/lab_11_Vue_todo/css/site.css
@@ -5,4 +5,21 @@ body {
 
 h1 {
     color:blue;
+    text-align: center;
 }
+
+body {
+    font-family: sans-serif;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 2em;
+    width: 80%;
+    margin: 0 auto;
+  }
+  input, textarea, button, p, div, section, article, select {
+    display: 'block';
+    width: 100%;
+    font-family: sans-serif;
+    font-size: 1em;
+    margin: 0.5em;
+  }
