js vue todo working

--- a/code/richard/javascript/vue/lab_11_Vue_todo/css/site.css
+++ b/code/richard/javascript/vue/lab_11_Vue_todo/css/site.css
@@ -23,3 +23,9 @@ body {
     font-size: 1em;
     margin: 0.5em;
   }
+
+
+  .done {
+      text-decoration: line-through;
+      background-color: gray;
+  }
