--- a/code/richard/javascript/lab_14_api_titanic/main.css
+++ b/code/richard/javascript/lab_14_api_titanic/main.css
@@ -18,7 +18,7 @@ html {
 
 
   #output {
-    background-color: whitesmoke;
+    background-color: rgb(238, 72, 22);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,6 +33,8 @@ html {
 
   #prediction {
       font-size: 80px;
+      color: white;
+      font-weight: bold;
   }
 
 
