--- a/code/conor/django/lab_6/drf-example-master/templates/home.html
+++ b/code/conor/django/lab_6/drf-example-master/templates/home.html
@@ -5,3 +5,36 @@
 <h1>Welcome, visitor!</h1>
 <p>You are not logged in. <a href="{% url 'login' %}">Login</a> <a href="{% url 'users:signup' %}">Sign Up</a></p>
 {% endif %}
+<div id="app">
+  <div v-for="student in students" v-bind:key="student.id">
+    <h3>[[ student.first_name ]] [[ student.last_name ]]</h3>
+    <p>Cohort: [[ student.cohort ]]</p>
+    <p>Favorite Topic: [[ student.favorite_topic ]]</p>
+    <p>Favorite Teacher: [[ student.favorite_teacher ]]</p>
+    <p>Capstone: <a v-bind:href="student.capstone">[[ student.capstone ]]</a></p>
+  </div>
+</div>
+<script src="https://unpkg.com/vue"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+  let vm = new Vue({
+    el: '#app',
+    delimiters: ['[[', ']]'],
+    data: {
+      students: []
+    },
+    methods: {
+      list: function () {
+        axios({
+          method: 'get',
+          url: 'api/v1/',
+
+        }).then(response => {console.log(response);
+        this.students = response.data});
+      }
+    },
+    mounted: function () {
+      this.list();
+    }
+  });
+</script>
