JS Lab13 Complete

--- a/code/brndn/JS_Labs/Lab13/style.css
+++ b/code/brndn/JS_Labs/Lab13/style.css
@@ -29,3 +29,17 @@ h4 {
     font-size: 1em;
     margin-top: 0em;
 }
+
+.paging {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    font-size: 2em;
+}
+
+.paging button {
+  border: none;
+  background-color: transparent;
+  font-size: 1.25em;
+}
